# chat-api

./: .code-workspace  .dockerignore  .editorconfig  .gitignore  .worktreeinclude  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.worker  MIGRATION_PLAN.md  PHASE1.md  PREVIEW_DEPLOYMENT.md  README.md  biome.json  compose.preview.yaml  compose.production.yaml  compose.staging.yaml  compose.yaml  package.json  tsconfig.json
apps/rag-python/: .dockerignore  .env.docker.example  .env.example  .env.migration.example  .gitignore  COLLECTION_RELATIONSHIP_IMPLEMENTATION.md  DOCKER_SETUP.md  DOCKER_TEST_RESULTS.md  Dockerfile  INGESTION_PLAN.md  RAG_IMPLEMENTATION.md  README.md  WORKER_GUIDE.md  pyproject.toml
apps/rag-python/docs/: MIGRATION_PLAN.md  TESTING_GUIDE.md  WORKER_GUIDE.md  WORKER_SCALING_TEST.md
apps/rag-python/examples/: collection_relationship_example.py
apps/rag-python/scripts/: send_test_message.py
apps/rag-python/src/rag_python/: __init__.py  config.py  dependencies.py  main.py
apps/rag-python/src/rag_python/adapters/: __init__.py  qdrant_mapper.py
apps/rag-python/src/rag_python/core/: constants.py  exceptions.py  logging.py  models.py  security.py
apps/rag-python/src/rag_python/migration/: __init__.py  config.py  controller.py  models.py  mysql_client.py  supabase_client.py  worker.py
apps/rag-python/tests/: README.md  __init__.py  conftest.py  test_api.py  test_collection_filter_operators.py  test_collection_filtering_integration.py  test_config.py  test_handlers_integration.py  test_health.py  test_hello.py  test_ingestion_service.py  test_ingestion_service_integration.py  test_point_ids.py  test_qdrant_service.py  test_rag_service.py  test_search_api.py  test_search_service.py  test_services.py  test_worker.py
apps/rag-python/tests/adapters/: __init__.py  test_qdrant_mapper.py
apps/rag-python/tests/repositories/: test_vector_repository.py
apps/rag-python/tests/services/: test_document_builders.py
apps/rag-python/tests/text_processing/: test_checksum.py  test_normalize_text.py  test_token_estimator.py
(+275 files in other folders)
