[project]
name = "rag-python"
version = "0.1.0"
description = "RAG Python project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "pydantic-settings>=2.0.0",
    "ruff>=0.13.3",
    "aioboto3>=15.0.0",
    "boto3>=1.39.11",
    "aiohttp>=3.11.0",
    "llama-index>=0.14.4",
    "llama-index-vector-stores-qdrant>=0.8.5",
    "fastembed>=0.7.3",
    "llama-index-embeddings-openai>=0.5.1",
    "qdrant-client[fastembed]>=1.15.1",
    "openai>=1.109.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "types-aioboto3-custom",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_python"]

[tool.uv.sources]
types-aioboto3-custom = { path = "vendored/types_aioboto3_custom-15.1.0-py3-none-any.whl" }
